--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -24,3 +24,13 @@
     box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
   }
 }
+
+.btn-header {
+  border-color: #ffffff;
+  background-color: #68d3ff;
+  &:active,
+  &:focus,
+  &:hover {
+    border-color: #ffffff !important;
+  }
+}
