--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <!-- Social Media -->
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
-          {% for link in site.data.sitetext[site.locale].footer.social %}
+          {% for link in site.data.sitetext[page.lang].footer.social %}
           <li class="list-inline-item">
             {% if link.url %}
             <a href="{{ link.url }}">
@@ -26,7 +26,7 @@
         <ul class="list-inline quicklinks">
           <li class="list-inline-item">
             <a href="legal"
-              >{{ site.data.sitetext[site.locale].footer.legal | default:
+              >{{ site.data.sitetext[page.lang].footer.legal | default:
               "Privacy Policy" }}</a
             >
           </li>
