--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -33,7 +33,7 @@
                 type="button"
               >
                 <i class="fas fa-times"></i>
-                {{ site.data.sitetext[site.locale].portfolio.closebutton |
+                {{ site.data.sitetext[page.lang].portfolio.closebutton |
                 default: "Close Project" }}
               </button>
             </div>
