--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.locale | slice: 0,2 | default: "en" }}">
+<html lang="{{ page.lang | slice: 0,2 | default: "en" }}">
 
   {% include head.html %}
 
