--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -1,7 +1,6 @@
 // Styling for the contact section
 section#contact {
-  background-color: $gray-900;
-  background-image: url("#{$contact-image}");
+  background-color: #212529;
   background-repeat: no-repeat;
   background-position: center;
   .section-heading {
