--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,15 +1,15 @@
 <!-- Clients -->
-  <section class="page-section" id="{{ site.data.sitetext[site.locale].clients.section | default: "clients" }}">
+  <section class="page-section" id="{{ site.data.sitetext[page.lang].clients.section | default: "clients" }}">
     <div class="container">
-      <div class="row" {% if site.data.sitetext[site.locale].clients.horizontal-scrolling == "yes" %} id="scrolling-clients" {% endif %}>
+      <div class="row" {% if site.data.sitetext[page.lang].clients.horizontal-scrolling == "yes" %} id="scrolling-clients" {% endif %}>
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Partners</h2>
-          <h3 class="section-subheading text-muted">List of companies contributing to the project.<br>They have the expertise you might need on FusionSuite!</h3>
+          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[page.lang].clients.title }}</h2>
+          <h3 class="section-subheading text-muted">{{ site.data.sitetext[page.lang].clients.text }}</h3>
         </div>
-      {% for client in site.data.sitetext[site.locale].clients.list %}
+      {% for client in site.data.sitetext[page.lang].clients.list %}
         <div class="col-md-6 col-sm-6">
           <a href="{{ client.url }}">
-            <img class="img-fluid d-block mx-auto" src="{{ client.logo }}" alt="{{ client.title }}" style="max-height: {{ site.data.sitetext[site.locale].clients.max-height | default: "100px" }}">
+            <img class="img-fluid d-block mx-auto" src="{{ client.logo }}" alt="{{ client.title }}" style="max-height: {{ site.data.sitetext[page.lang].clients.max-height | default: "100px" }}">
           </a>
           <br>
           <p class="text-muted" style="text-align: justify;">{{ client.desc }}</p>
