--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,18 +1,18 @@
-<!-- Services -->
-  <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
+<!-- Features -->
+  <section class="page-section" id="{{ site.data.sitetext[page.lang].features.section | default: "features" }}">
     <div class="container">
 	
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].services.title | default: "Services" }}</h2>
-          {% if site.data.sitetext[site.locale].services.text %}
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].services.text }}</h3>
+          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[page.lang].features.title | default: "Features" }}</h2>
+          {% if site.data.sitetext[page.lang].features.text %}
+		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[page.lang].features.text }}</h3>
 		  {% endif %}
         </div>
       </div>
-	  
+  
       <div class="row text-center">
-	  {% for service in site.data.sitetext[site.locale].services.list %}
+	  {% for service in site.data.sitetext[page.lang].features.list %}
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -26,4 +26,4 @@
 	  
     </div>
   </section>
-<!-- End Services -->
+<!-- End Features -->
