--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,10 +2,10 @@
 <nav
   class="navbar navbar-expand-lg navbar-dark fixed-top"
   id="mainNav"
-  style="background-color: #212529"
+  style="background-color: #495057"
 >
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="{{ site.baseurl }}/#">
+    <a class="navbar-brand js-scroll-trigger" href="{{ site.baseurl }}">
       {%- if site.logo -%}
       <img
         height="{{ site.logo.height | default: 52 }}"
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        {%- for link in site.data.navigation[site.locale].nav -%}
+        {%- for link in site.data.navigation[page.lang].nav -%}
         <li class="nav-item">
           {%- if link.url -%}
           <a class="nav-link js-scroll-trigger" href="{{ link.url }}"
