--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@ layout: default
 ---
 {% include navheader.html %}
 
-{% include services.html %}
-{% include about.html %}
+{% include features.html %}
+{% include presentation.html %}
 {% include timeline.html %}
 {% include team.html %}
 {% include clients.html %}
