--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -17,7 +17,7 @@
   &:hover {
     background-color: darken($primary, 7.5%) !important;
     border-color: darken($primary, 7.5%) !important;
-    color: white;
+    color: #68d3ff;
   }
   &:active,
   &:focus {
@@ -26,11 +26,18 @@
 }
 
 .btn-header {
-  border-color: #ffffff;
-  background-color: #68d3ff;
+  border-color: #68d3ff;
+  background-color: #ffffff;
+  color: #68d3ff;
   &:active,
   &:focus,
   &:hover {
-    border-color: #ffffff !important;
+    border-color: #68d3ff !important;
+    background-color: #ffffff !important;
+    color: #68d3ff !important;
+  }
+  &:active,
+  &:focus {
+    box-shadow: none !important;
   }
 }
