--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -26,13 +26,13 @@
           </li>
         {% endfor %}
           <li class="nav-item">
-            <a class="nav-flag js-scroll-trigger" href="index.html">
-              <img src="assets/img/locale/en.png">
+            <a class="nav-flag js-scroll-trigger" href="/index.html">
+              <img src="/assets/img/locale/en.png">
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-flag js-scroll-trigger" href="index.fr.html">
-              <img src="assets/img/locale/fr.png">
+            <a class="nav-flag js-scroll-trigger" href="/index.fr.html">
+              <img src="/assets/img/locale/fr.png">
             </a>
           </li>
         </ul>
@@ -42,19 +42,39 @@
   <!-- End Navigation -->
   
   <!-- Header -->
-  <header class="masthead">
+  {% if page.layout == "post" %}
+  <header class="masthead" style="background-color: #68d3ff; background: unset !important; height: 130px !important;">
     <div class="container">
       <div class="intro-text">
-	  {%- if site.data.sitetext[page.lang].header.title -%}
+    {%- if site.data.sitetext[page.lang].header.title -%}
         <div class="intro-lead-in">{{ site.data.sitetext[page.lang].header.title | markdownify }}</div>
-	  {%- endif -%}
-	  {%- if site.data.sitetext[page.lang].header.text -%}
+    {%- endif -%}
+    {%- if site.data.sitetext[page.lang].header.text -%}
         <div class="intro-heading text-uppercase">{{ site.data.sitetext[page.lang].header.text | markdownify }}</div>
-	  {%- endif -%}
-	  {%- if site.data.sitetext[page.lang].header.button -%}
+    {%- endif -%}
+    {%- if site.data.sitetext[page.lang].header.button -%}
         <a class="btn-header btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{{ site.data.sitetext[page.lang].header.buttonlink }}">{{ site.data.sitetext[page.lang].header.button }}</a>
-	  {%- endif -%}
+    {%- endif -%}
       </div>
     </div>
   </header>
+
+  {% else %}
+    <header class="masthead">
+      <div class="container">
+        <div class="intro-text">
+      {%- if site.data.sitetext[page.lang].header.title -%}
+          <div class="intro-lead-in">{{ site.data.sitetext[page.lang].header.title | markdownify }}</div>
+      {%- endif -%}
+      {%- if site.data.sitetext[page.lang].header.text -%}
+          <div class="intro-heading text-uppercase">{{ site.data.sitetext[page.lang].header.text | markdownify }}</div>
+      {%- endif -%}
+      {%- if site.data.sitetext[page.lang].header.button -%}
+          <a class="btn-header btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{{ site.data.sitetext[page.lang].header.buttonlink }}">{{ site.data.sitetext[page.lang].header.button }}</a>
+      {%- endif -%}
+        </div>
+      </div>
+    </header>
+  {% endif %}
+  
   <!-- End Header -->
