--- a/_includes/presentation.html
+++ b/_includes/presentation.html
@@ -8,15 +8,17 @@
     </div>
 
     <div class="row text-center">
-      <div class="col-md-12">
-        <a href="{{ site.data.sitetext[page.lang].presentation.url | default: '' }}" target="_blank">
+      {% for presentation in site.data.sitetext[page.lang].presentation.list %}
+      <div class="col-md-3">
+        <a href="{{ presentation.url | default: '' }}" target="_blank">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-slideshare fa-stack-1x fa-inverse"></i>
           </span>
-          <div class="text-muted">{{ site.data.sitetext[page.lang].presentation.text | default: "Slides" }}</div>
+          <div class="text-muted">{{ presentation.title | default: "Slides" }}</div>
         </a>
       </div>
+      {% endfor %}
     </div>
   </div>
 </section>
